# provisio

./: .gitignore  README.md  RELEASING.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: adoption-ladder.md  case-study.md  concepts.md  index.md  reference.md  state-and-audit.md
src/provisio/: __init__.py  app_cli.py  application.py  cli_tool.py  command.py  context.py  diff.py  errors.py  interaction.py  logging.py  plan.py  primitives.py  reporting.py  settings.py  state.py  testing.py
tests/unit/: test_app_cli.py  test_audit_logging.py  test_cli_state_diff.py  test_cli_tool.py  test_cloud_agnostic.py  test_command_result.py  test_command_runner.py  test_context.py  test_diff.py  test_plan.py  test_primitives_confirm_poll.py  test_primitives_ensure.py  test_reporter.py  test_runner_audit.py  test_settings.py  test_simplicity_budget.py  test_state.py  test_subprocess_runner.py  test_version.py
