[project]
name = "provisio"
version = "0.2.0"
description = "Compose, test, and audit CLI-driven infrastructure provisioning — wrap the vendor CLIs you already use."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "provisio maintainers" }]
keywords = ["infrastructure", "iac", "provisioning", "cli", "devops", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
# The core is intentionally dependency-free (stdlib + typing.Protocol only).
# Everything beyond the bare core is an opt-in extra (see the simplicity budget).
dependencies = []

[project.optional-dependencies]
cli = ["click>=8.1"]
rich = ["rich>=13.0"]

[project.urls]
Homepage = "https://github.com/elisco-latour/provisio"
Documentation = "https://elisco-latour.github.io/provisio/"
Repository = "https://github.com/elisco-latour/provisio"
Issues = "https://github.com/elisco-latour/provisio/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/provisio"]

[dependency-groups]
# rich/click are optional runtime extras; installed here so the dev test suite can
# exercise ConsoleReporter (rich) and the generated CLI (click).
dev = ["pytest>=8.0", "rich>=13.0", "click>=8.1"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.26"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
